--- a/kebijakan-privasi.html
+++ b/kebijakan-privasi.html
@@ -5,7 +5,7 @@
     <link rel="preload" href="./js/chatbot.js" as="script">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kebijakan Privasi - Warung Bu Rom</title>
-    <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
+    <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.ico" />
 
     <!-- HTML Meta Tags -->
     <meta name="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
