--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Pemesanan Menu - Warung Bu Rom</title>
+        <link rel="manifest" href="/manifest.json">
+        <meta name="theme-color" content="#d44c3d">
+
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./css/index.css" />
 
@@ -92,6 +95,9 @@
                     <i class="fas fa-download"></i>
                     Download Aplikasi
                 </a>
+                <button id="enable-notifications" class="download-app" style="margin-left:10px;">
+                    <i class="fas fa-bell"></i> Aktifkan Notifikasi
+                </button>
             </div>
 
             <div class="progress-bar">
@@ -217,5 +223,55 @@
                 <p>Website ini memerlukan JavaScript untuk berfungsi dengan baik. Mohon aktifkan JavaScript pada peramban Anda.</p>
             </div>
         </noscript>
+
+        <script>
+          (function() {
+            if ('serviceWorker' in navigator) {
+              window.addEventListener('load', async () => {
+                try {
+                  const reg = await navigator.serviceWorker.register('/service-worker.js');
+                  console.log('Service Worker terdaftar:', reg);
+
+                  navigator.serviceWorker.addEventListener('controllerchange', () => {
+                    console.log('controllerchange');
+                  });
+                } catch (err) {
+                  console.warn('Registrasi Service Worker gagal:', err);
+                }
+              });
+            }
+
+            const btn = document.getElementById('enable-notifications');
+            if (!btn) return;
+
+            btn.addEventListener('click', async () => {
+              if (!('Notification' in window)) {
+                swal('Notifikasi', 'Peramban Anda tidak mendukung notifikasi.', 'warning');
+                return;
+              }
+
+              try {
+                const permission = await Notification.requestPermission();
+                if (permission === 'granted') {
+                  const reg = await navigator.serviceWorker.ready;
+                  reg.showNotification('Terima kasih!', {
+                    body: 'Notifikasi diaktifkan. Anda akan menerima info penting dari Warung Bu Rom.',
+                    icon: '/image/IMG-11022025-buRom.webp',
+                    badge: '/image/IMG-11022025-buRom.webp',
+                    vibrate: [100,50,100]
+                  });
+                  swal('Berhasil', 'Notifikasi aktif!', 'success');
+                } else if (permission === 'denied') {
+                  swal('Dibatalkan', 'Anda menolak permintaan notifikasi.', 'error');
+                } else {
+                  swal('Info', 'Izin notifikasi belum diberikan.', 'info');
+                }
+              } catch (err) {
+                console.error('Permintaan notifikasi gagal', err);
+                swal('Error', 'Terjadi kesalahan saat meminta izin notifikasi.', 'error');
+              }
+            });
+          })();
+        </script>
     </body>
 </html>
